# chatserver_v2

./: CMakeLists.txt  Dockerfile  docker-compose.yml  从零开始学习指南.md  升级优化计划书.md  完整流程文档.md  实验报告三.docx  项目架构与面试指南.md
config/: nginx.conf  server.conf  server_docker.conf
docs/: 流程演示.html
include/: public.hpp
include/server/: chatservice.hpp  config.hpp  password_utils.hpp
include/server/db/: connectionpool.hpp  db.h
include/server/redis/: redis.hpp
scripts/: init.sql
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  config.cpp  main.cpp  password_utils.cpp
src/server/db/: connectionpool.cpp  db.cpp
src/server/model/: friendmoel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
